@@ -1068,20 +1068,29 @@ operator|.
 name|next
 argument_list|()
 decl_stmt|;
-name|nl
-operator|.
-name|add
-argument_list|(
-name|s
-argument_list|,
+for|for
+control|(
+name|String
+name|val
+range|:
 name|params
 operator|.
 name|getParams
 argument_list|(
 name|s
 argument_list|)
+control|)
+block|{
+name|nl
+operator|.
+name|add
+argument_list|(
+name|s
+argument_list|,
+name|val
 argument_list|)
 expr_stmt|;
+block|}
 block|}
 return|return
 name|nl
