@@ -227,6 +227,15 @@ argument_list|(
 literal|"1*"
 argument_list|)
 expr_stmt|;
+name|updateRequest
+operator|.
+name|setParam
+argument_list|(
+literal|"a"
+argument_list|,
+literal|"b"
+argument_list|)
+expr_stmt|;
 name|SolrInputDocument
 name|doc
 init|=
@@ -655,6 +664,21 @@ operator|.
 name|get
 argument_list|(
 literal|0
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"b"
+argument_list|,
+name|updateUnmarshalled
+operator|.
+name|getParams
+argument_list|()
+operator|.
+name|get
+argument_list|(
+literal|"a"
 argument_list|)
 argument_list|)
 expr_stmt|;
